fix overflow tooltip hover on disabled items, wire description prop through component tree

--- a/packages/cbac-components/src/cbac-picker/base/OverflowItem.module.css
+++ b/packages/cbac-components/src/cbac-picker/base/OverflowItem.module.css
@@ -30,7 +30,7 @@
   background: transparent;
 }
 
-.overflowItem:hover:not(:disabled) {
+.overflowItem:hover:not(:disabled):not([aria-disabled="true"]) {
   background: var(--osdk-surface-background-color-default-hover);
 }
 
@@ -48,10 +48,6 @@
   color: var(--osdk-cbac-marking-button-color-disallowed);
   cursor: not-allowed;
   opacity: var(--osdk-cbac-disabled-opacity);
-}
-
-.tooltipTriggerWrapper {
-  display: contents;
 }
 
 .tooltip {
